2008-08-31 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bug-895992.c,
	  support/regression/tests/onebyte.c:
	  enabled pic16 regression testing since the bugs
	  1511794: pic16: regression test bug-895992.c fails
	  1444425: onebyte.c regression tes fails on pic16
	  are fiexed, probably by fixing
	  2048464: PIC16: fix genUminus - addresses not.c regression test

2008-08-30 Borut Razem <borut.razem AT siol.net>

	* support/cpp/libcpp/files.c: SDCPP synchronized with GCC CPP
	  release version 4.3.2

2008-08-24 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/configure, device/lib/pic16/configure.ac:
	  always use the sdcc from the current build tree (ignore $CC from
	  the environment, fixes compile farm builds)
	* device/lib/Makefile.in: rename .a into .lib for compatibility,
	  remove more build products from install directory
	* sdcc/src/pic16/main.c (_pic16_linkEdit,_pic16_finaliseOptions)
	* sdcc/support/scripts/sdcc.nsi: revert to .lib extension for libs

2008-08-24 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.y: applied patch
	  2050245: Fix # 1963382
	  for bug
	  1963382: Listing File - C file comment is incorrect
	  thanks to RvS

2008-08-23 Borut Razem <borut.razem AT siol.net>

	* src/pic16/gen.c: applied patch
	  2048464: PIC16: fix genUminus - addresses not.c regression test
	  thanks Mauro Giachero

2008-08-22 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/configure, device/lib/pic16/configure.ac,
	  src/pic16/main.c: allow spaces in gpasm and gplink paths

2008-08-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	* src/z80/peeph-z80.def: minor peephole improvement

2008-08-15 Raphael Neider <rneider AT web.de>

	* src/z80/gen.c (_vemit2): suppress compiler warning

	* src/pic/*.[ch]: make proper use of header files and avoid
	  ad-hoc extern declarations, mark module-local helpers 'static',
	  removed dead/replaced code, no functional changes